--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "css-minimizer-webpack-plugin": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.1.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
